# ubu-simplestrss

./: CMakeLists.txt  LICENSE  README.md  clickable.json  main.cpp  manifest.json.in  simplestrss.apparmor  simplestrss.contenthub  simplestrss.desktop.in
plugins/: CMakeLists.txt
plugins/rsscore/: CMakeLists.txt  feed.cpp  feed.h  plugin.cpp  plugin.h  qmldir  rsscore.cpp  rsscore.h
po/: es.po  fr.po  nb.po  nl.po  simplestrss.kazord.pot
qml/: About.qml  Main.qml  ManageRSS.qml  PreviewRSS.qml  SettingsRSS.qml  ViewDetailRSS.qml  ViewDetailRSSWebview.qml  ViewRSS.qml
src/: article.cpp  article.h  autodetectinfos.cpp  autodetectinfos.h  db.cpp  db.h  feedinfos.cpp  feedinfos.h  web.cpp  web.h  xml.cpp  xml.h
